Commit from Bolt to GitHub

--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "mcan-appointment-letter-system",
+  "name": "task-management-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.7",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-to-print": "^2.15.1"
+    "react-router-dom": "^6.22.2",
+    "zustand": "^4.5.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.1",
+    "date-fns": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
