--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -18,5 +18,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["MCAN Executive Appointment Letter System"]
+  "include": ["vite.config.ts"]
 }
